# 2d-text-game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: button.cpp  variables.hpp
